refactor: 자바 17에 맞게 코드 변경